--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                     <span>VOIR LE RESULTAT DE MON TEST DE LEADERSHIP</span>
                 </div>
             </button>
-        </a> <br> <br>
+        </a>
+    </section>
 
 
 
